fabric/testdata/out/ing_spp-product-search-pre-prod-reject-http-route-spp-product-search-pre-prod-master-301.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    metacontroller.k8s.io/last-applied-configuration: '{"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{"zalando.org/aws-load-balancer-ssl-policy":"ELBSecurityPolicy-FS-2018-06","zalando.org/skipper-routes":"PathSubtree(\"/\")
      \u0026\u0026 Header(\"X-Forwarded-Proto\", \"http\") -\u003e unverifiedAuditLog(\"sub\")
      -\u003e status(400) -\u003e inlineContent(\"{\\\"title\\\":\\\"Gateway Rejected\\\",\\\"status\\\":400,\\\"detail\\\":\\\"TLS
      is required\\\",\\\"type\\\":\\\"https://cloud.docs.zalando.net/howtos/ingress/#redirect-http-to-https\\\"}\")
      -\u003e \u003cshunt\u003e"},"labels":{"controller-uid":"7ac92c28-f589-48e8-98fe-454926fa0c25","deployment-id":"d-79xdtzozq679c8g5yc41iz923","pipeline-id":"l-kegu7kiv13mu2pr57d32arxh5"},"name":"spp-product-search-pre-prod-reject-http-route-spp-product-search-pre-prod-master-301","namespace":"default"},"spec":{"rules":[{"host":"spp-product-search-pre-prod-master-301.smart-product-platform-test.zalan.do","http":{"paths":[{"backend":{"serviceName":"spp-product-search-pre-prod-master-301","serv [...]
    zalando.org/aws-load-balancer-ssl-policy: ELBSecurityPolicy-FS-2018-06
    zalando.org/skipper-routes: PathSubtree("/") && Header("X-Forwarded-Proto", "http")
      -> unverifiedAuditLog("sub") -> status(400) -> inlineContent("{\"title\":\"Gateway
      Rejected\",\"status\":400,\"detail\":\"TLS is required\",\"type\":\"https://cloud.docs.zalando.net/howtos/ingress/#redirect-http-to-https\"}")
      -> <shunt>
  creationTimestamp: "2021-08-20T12:36:55Z"
  generation: 1
  labels:
    controller-uid: 7ac92c28-f589-48e8-98fe-454926fa0c25
    deployment-id: d-79xdtzozq679c8g5yc41iz923
    pipeline-id: l-kegu7kiv13mu2pr57d32arxh5
  name: spp-product-search-pre-prod-reject-http-route-spp-product-search-pre-prod-master-301
  namespace: default
  ownerReferences:
  - apiVersion: zalando.org/v1
    blockOwnerDeletion: true
    controller: true
    kind: FabricGateway
    name: spp-product-search-pre-prod
    uid: 7ac92c28-f589-48e8-98fe-454926fa0c25
  resourceVersion: "1357490001"
  uid: f4a6a91e-ab41-4cb6-aaa5-f949cd84518c
spec:
  rules:
  - host: spp-product-search-pre-prod-master-301.smart-product-platform-test.zalan.do
    http:
      paths:
      - backend:
          service:
            name: spp-product-search-pre-prod-master-301
            port:
              number: 8080
        pathType: ImplementationSpecific
status:
  loadBalancer:
    ingress:
    - hostname: kube-ing-lb-vejw9uwox1cj-898356825914b821.elb.eu-central-1.amazonaws.com
